style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}
nav {
  display: flex;
  height: 10vh;
  padding: 0 10%;
  align-items: center;
  justify-content: space-between;
  background-color: #282828;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.514);
}

.logo {
  color: lightgreen;
  font-size: 1.2rem;
}

.nav-links {
  display: flex;
  width: 30%;
  justify-content: space-between;
  list-style: none;
}

.nav-link {
  padding: 0 10px;
  text-decoration: none;
  color: lightgray;
  transition: all 0.3s ease;
}

.nav-link:hover {
  color: lightgreen;
}

.hamburger {
  color: lightgray;
  display: none;
  text-decoration: none;
  font-size: 1.5rem;
}

@media screen and (max-width: 600px) {
  nav {
    flex-direction: column;
    padding: 3% 0;
  }
  .nav-links {
    display: none;
  }
  .nav-links-show {
    display: flex;
    flex-direction: column;
    padding-bottom: 10px;
    text-align: center;
    background-color: #282828;
    width: 100%;
    padding: 10px;
  }
  .nav-links-show li {
    padding: 5px;
  }
  .hamburger {
    display: block;
    position: absolute;
    right: 5%;
    cursor: pointer;
  }
}

